--- a/app/templates/admin/class_specializations/class_specializations.html
+++ b/app/templates/admin/class_specializations/class_specializations.html
@@ -14,7 +14,7 @@
                     </a>
                 </div>
 
-                {% if specializations %}
+                {% if specializations.items %}
                     <table class="table table-striped table-bordered">
                         <thead>
                         <tr>
@@ -26,7 +26,7 @@
                         </tr>
                         </thead>
                         <tbody>
-                        {% for specialization in specializations %}
+                        {% for specialization in specializations.items %}
                             <tr>
                                 <td> {{ specialization.id }} </td>
                                 <td> {{ specialization.name }} </td>
@@ -45,6 +45,19 @@
                         {% endfor %}
                         </tbody>
                     </table>
+                    <ul class="pagination">
+                    {%- for page in specializations.iter_pages() %}
+                        {% if page %}
+                            {% if page != specializations.page %}
+                                <li><a href="{{ url_for('admin.list_class_specializations', pagin=page) }} ">{{ page }}</a></li>
+                            {% else %}
+                                <li class="active"><a href="#">{{ page }}</a></li>
+                            {% endif %}
+                        {% else %}
+                            <li><span class=ellipsis>…</span></li>
+                        {% endif %}
+                    {%- endfor %}
+                    </ul>
                 {% else %}
                     <div class="alert alert-warning" role="alert">No class specialization have been added.</div>
                 {% endif %}
