--- a/app/templates/admin/classrooms/classrooms.html
+++ b/app/templates/admin/classrooms/classrooms.html
@@ -14,7 +14,7 @@
                     </a>
                 </div>
 
-                {% if classrooms %}
+                {% if classrooms.items %}
                     <table class="table table-striped table-bordered">
                         <thead>
                         <tr>
@@ -26,7 +26,7 @@
                         </tr>
                         </thead>
                         <tbody>
-                        {% for classroom in classrooms %}
+                        {% for classroom in classrooms.items %}
                             <tr>
                                 <td> {{ classroom.id }} </td>
                                 <td> {{ classroom.name }} </td>
@@ -45,6 +45,19 @@
                         {% endfor %}
                         </tbody>
                     </table>
+                    <ul class="pagination">
+                    {%- for page in classrooms.iter_pages() %}
+                        {% if page %}
+                            {% if page != classrooms.page %}
+                                <li><a href="{{ url_for('admin.list_classrooms', pagin=page) }} ">{{ page }}</a></li>
+                            {% else %}
+                                <li class="active"><a href="#">{{ page }}</a></li>
+                            {% endif %}
+                        {% else %}
+                            <li><span class=ellipsis>…</span></li>
+                        {% endif %}
+                    {%- endfor %}
+                    </ul>
                 {% else %}
                     <div class="alert alert-warning" role="alert">No classrooms have been added.</div>
                 {% endif %}
