--- a/app/templates/admin/plans/list.html
+++ b/app/templates/admin/plans/list.html
@@ -28,7 +28,7 @@
                     </li>
                 </ul>
 
-                {% if educationPlan %}
+                {% if educationPlan.items %}
                     <table class="table table-striped table-bordered">
                         <thead>
                         <tr>
@@ -42,7 +42,7 @@
                         </tr>
                         </thead>
                         <tbody>
-                        {% for plan in educationPlan %}
+                        {% for plan in educationPlan.items %}
                             <tr>
                                 <td> {{ plan.id }} </td>
                                 <td> {{ plan.year }} </td>
@@ -63,6 +63,19 @@
                         {% endfor %}
                         </tbody>
                     </table>
+                    <ul class="pagination">
+                    {%- for page in educationPlan.iter_pages() %}
+                        {% if page %}
+                            {% if page != educationPlan.page %}
+                                <li><a href="{{ url_for('admin.list_plan', pagin=page) }} ">{{ page }}</a></li>
+                            {% else %}
+                                <li class="active"><a href="#">{{ page }}</a></li>
+                            {% endif %}
+                        {% else %}
+                            <li><span class=ellipsis>…</span></li>
+                        {% endif %}
+                    {%- endfor %}
+                    </ul>
                 {% else %}
                     <div class="alert alert-warning" role="alert">No planes.</div>
                 {% endif %}
