--- a/app/templates/admin/room_specializations/room_specializations.html
+++ b/app/templates/admin/room_specializations/room_specializations.html
@@ -14,7 +14,7 @@
                     </a>
                 </div>
 
-                {% if room_specializations %}
+                {% if room_specializations.items %}
 
                     <table class="table table-striped table-bordered">
                         <thead>
@@ -27,7 +27,7 @@
                         </tr>
                         </thead>
                         <tbody>
-                        {% for room_specialization in room_specializations %}
+                        {% for room_specialization in room_specializations.items %}
                             <tr>
                                 <td> {{ room_specialization.id }} </td>
                                 <td> {{ room_specialization.name }} </td>
@@ -46,7 +46,19 @@
                         {% endfor %}
                         </tbody>
                     </table>
-
+                    <ul class="pagination">
+                    {%- for page in room_specializations.iter_pages() %}
+                        {% if page %}
+                            {% if page != room_specializations.page %}
+                                <li><a href="{{ url_for('admin.list_room_specializations', pagin=page) }} ">{{ page }}</a></li>
+                            {% else %}
+                                <li class="active"><a href="#">{{ page }}</a></li>
+                            {% endif %}
+                        {% else %}
+                            <li><span class=ellipsis>…</span></li>
+                        {% endif %}
+                    {%- endfor %}
+                    </ul>
                 {% else %}
                     <div class="alert alert-warning" role="alert">No room specialization have been added.</div>
                 {% endif %}
