--- a/app/templates/admin/subjects/list.html
+++ b/app/templates/admin/subjects/list.html
@@ -13,37 +13,50 @@
                 </a>
             </div>
 
-            {% if subjects %}
-            <table class="table table-striped table-bordered">
-                <thead>
-                <tr>
-                    <th width="10%"> ID </th>
-                    <th width="40%"> Name </th>
-                    <th width="20%"> Teacher Count </th>
-                    <th width="15%"> Edit </th>
-                    <th width="15%"> Delete </th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for subject in subjects %}
+            {% if subjects.items %}
+                <table class="table table-striped table-bordered">
+                    <thead>
                     <tr>
-                        <td> {{ subject.id }} </td>
-                        <td> {{ subject.name }} </td>
-                        <td> {{ subject.teacher_subject_id.count() }} </td>
-                        <td>
-                            <a href="{{ url_for('admin.edit_subject', id=subject.id) }}">
-                                <i class="fas fa-pencil-alt"></i> edit
-                            </a>
-                        </td>
-                        <td>
-                            <a href="{{ url_for('admin.delete_subject', id=subject.id) }}">
-                                <i class="fas fa-trash"></i> delete
-                            </a>
-                        </td>
+                        <th width="10%"> ID </th>
+                        <th width="40%"> Name </th>
+                        <th width="20%"> Teacher Count </th>
+                        <th width="15%"> Edit </th>
+                        <th width="15%"> Delete </th>
                     </tr>
-                {% endfor %}
-                </tbody>
-            </table>
+                    </thead>
+                    <tbody>
+                    {% for subject in subjects.items %}
+                        <tr>
+                            <td> {{ subject.id }} </td>
+                            <td> {{ subject.name }} </td>
+                            <td> {{ subject.teacher_subject_id.count() }} </td>
+                            <td>
+                                <a href="{{ url_for('admin.edit_subject', id=subject.id) }}">
+                                    <i class="fas fa-pencil-alt"></i> edit
+                                </a>
+                            </td>
+                            <td>
+                                <a href="{{ url_for('admin.delete_subject', id=subject.id) }}">
+                                    <i class="fas fa-trash"></i> delete
+                                </a>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+                <ul class="pagination">
+                    {%- for page in subjects.iter_pages() %}
+                        {% if page %}
+                            {% if page != subjects.page %}
+                                <li><a href="{{ url_for('admin.list_subjects', pagin=page) }} ">{{ page }}</a></li>
+                            {% else %}
+                                <li class="active"><a href="#">{{ page }}</a></li>
+                            {% endif %}
+                        {% else %}
+                            <li><span class=ellipsis>…</span></li>
+                        {% endif %}
+                    {%- endfor %}
+                </ul>
             {% else %}
                 <div class="alert alert-warning" role="alert">No subjects have been added.</div>
             {% endif %}
