--- a/app/templates/classes/class.html
+++ b/app/templates/classes/class.html
@@ -15,7 +15,7 @@
                     </a>
                 </div>
 
-                {% if classesList %}
+                {% if classesList.items %}
                     <table class="table table-striped table-bordered">
                         <thead>
                         <tr>
@@ -31,7 +31,7 @@
                         </tr>
                         </thead>
                         <tbody>
-                        {% for classOne in classesList %}
+                        {% for classOne in classesList.items %}
                             <tr>
                                 <td> {{ classOne.id }} </td>
                                 <td>
@@ -76,6 +76,19 @@
                         {% endfor %}
                         </tbody>
                     </table>
+                    <ul class="pagination">
+                    {%- for page in classesList.iter_pages() %}
+                        {% if page %}
+                            {% if page != classesList.page %}
+                                <li><a href="{{ url_for('admin.list_parent_to_student', pagin=page) }} ">{{ page }}</a></li>
+                            {% else %}
+                                <li class="active"><a href="#">{{ page }}</a></li>
+                            {% endif %}
+                        {% else %}
+                            <li><span class=ellipsis>…</span></li>
+                        {% endif %}
+                    {%- endfor %}
+                    </ul>
                 {% else %}
                     <div class="alert alert-warning" role="alert">No class have been added.</div>
                 {% endif %}
