--- a/app/templates/admin/classes/class.html
+++ b/app/templates/admin/classes/class.html
@@ -10,7 +10,7 @@
                 </div>
 
                 <div style="text-align: center">
-                    <a href="{{ url_for('classes.add_class') }}" class="btn btn-default btn-lg">
+                    <a href="{{ url_for('admin.add_class') }}" class="btn btn-default btn-lg">
                         <i class="fas fa-plus"></i> Add Class
                     </a>
                 </div>
@@ -35,7 +35,7 @@
                             <tr>
                                 <td> {{ classOne.id }} </td>
                                 <td>
-                                    <a href="{{ url_for('classes.one_class', class_id=classOne.id) }}">
+                                    <a href="{{ url_for('admin.one_class', class_id=classOne.id) }}">
                                         {{ classOne }}
                                     </a>
                                 </td>
@@ -52,22 +52,22 @@
                                     ({{ classOne.classrooms.room_specializations.name }})
                                 </td>
                                 <td>
-                                    <a href="{{ url_for('classes.edit_class', id=classOne.id) }}">
+                                    <a href="{{ url_for('admin.edit_class', id=classOne.id) }}">
                                         <i class="fas fa-pencil-alt"></i> edit
                                     </a>
                                     <br>
-                                    <a href="{{ url_for('classes.delete_class', id=classOne.id) }}">
+                                    <a href="{{ url_for('admin.delete_class', id=classOne.id) }}">
                                         <i class="fas fa-trash"></i> delete
                                     </a>
                                 </td>
                                 <td>
                                     {{ classOne.students.count() }}<br>
                                     {% if classOne.students.count()!=0 %}
-                                        <a href="{{ url_for('classes.list_students', id=classOne.id) }}">
+                                        <a href="{{ url_for('admin.list_students', id=classOne.id) }}">
                                             <i class="fas fa-pencil-alt"></i> edit list
                                         </a>
                                     {% else %}
-                                        <a href="{{ url_for('classes.add_student', id=classOne.id) }}">
+                                        <a href="{{ url_for('admin.add_student', id=classOne.id) }}">
                                         <i class="fas fa-plus"></i> add student
                                     </a>
                                     {% endif %}
@@ -94,7 +94,7 @@
                 {% endif %}
 
                 <div style="text-align: center">
-                    <a href="{{ url_for('classes.add_class') }}" class="btn btn-default btn-lg">
+                    <a href="{{ url_for('admin.add_class') }}" class="btn btn-default btn-lg">
                         <i class="fas fa-plus"></i> Add Class
                     </a>
                 </div>
