--- a/app/templates/admin/schedule/dayTeacherList.html
+++ b/app/templates/admin/schedule/dayTeacherList.html
@@ -41,7 +41,7 @@
                                         </a>
                                     </td>
                                     <td>
-                                        <a href="{{ url_for('classes.one_class', class_id=schedule.classes.id) }}">
+                                        <a href="{{ url_for('admin.one_class', class_id=schedule.classes.id) }}">
                                             {{ schedule.classes.name }}
                                         </a>
                                     </td>
