--- a/app/templates/home/admin_dashboard.html
+++ b/app/templates/home/admin_dashboard.html
@@ -1,16 +1,14 @@
 {% extends "base.html" %}
 {% block title %}Admin Dashboard{% endblock %}
 {% block body %}
-<div class="intro-header">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="intro-message">
-                    <h1>Admin Dashboard</h1>
-                    <h3>For administrators only!</h3>
+    <div class="outer">
+        <div class="center">
+            <div class="jumbotron">
+                <div class="container">
+                <h1>Admin Dashboard</h1>
+                <p>For administrators only!</p>
                 </div>
             </div>
         </div>
     </div>
-</div>
 {% endblock %}
