--- a/app/templates/home/teacher_dashboard_all.html
+++ b/app/templates/home/teacher_dashboard_all.html
@@ -21,7 +21,7 @@
         </div>
 
         <div>Head Class:
-            {% if headClass %}<a href="{{ url_for('classes.one_class', class_id=headClass.id) }}">
+            {% if headClass %}<a href="{{ url_for('admin.one_class', class_id=headClass.id) }}">
                 {{ headClass.name }}
             </a>
             {% else %}
