FIX Class dashboard

--- a/app/templates/admin/classes/class.html
+++ b/app/templates/admin/classes/class.html
@@ -35,7 +35,7 @@
                             <tr>
                                 <td> {{ classOne.id }} </td>
                                 <td>
-                                    <a href="{{ url_for('admin.one_class', class_id=classOne.id) }}">
+                                    <a href="{{ url_for('home.class_dashboard', class_id=classOne.id) }}">
                                         {{ classOne }}
                                     </a>
                                 </td>
