--- a/app/templates/home/index.html
+++ b/app/templates/home/index.html
@@ -3,16 +3,14 @@
     {{ title }}
 {% endblock %}
 {% block body %}
-<div class="intro-header">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="intro-message">
-                    <h1>SchoolDB</h1>
-                    <h3>database "School"</h3>
+    <div class="outer">
+        <div class="center">
+            <div class="jumbotron">
+                <div class="container">
+                <h1>SchoolDB</h1>
+                <h3>Database "School"</h3>
                 </div>
             </div>
         </div>
     </div>
-</div>
 {% endblock %}
