CHANGE project structure: Schedule (for Class) carried out in a separate module

--- a/app/templates/schedule/dayClassList.html
+++ b/app/templates/schedule/dayClassList.html
@@ -17,7 +17,7 @@
                         {% else %}
                         <li role="presentation">
                         {% endif %}
-                            <a href="{{ url_for('admin.list_schedule_class', id_class=currentClass.id, id_day=day.day) }}">
+                            <a href="{{ url_for('schedule.list_schedule_class', id_class=currentClass.id, id_day=day.day) }}">
                                 {{ day.fullday }}
                             </a>
                         </li>
