--- a/app/templates/home/class_dashboard.html
+++ b/app/templates/home/class_dashboard.html
@@ -22,7 +22,7 @@
 
         <br>
         <div>
-            <a href="{{ url_for('admin.list_schedule_class', id_class=_class.id, id_day=1) }}"
+            <a href="{{ url_for('schedule.list_schedule_class', id_class=_class.id, id_day=1) }}"
                class="btn btn-default">
                 Schedule
             </a>
