--- a/app/templates/home/index.html
+++ b/app/templates/home/index.html
@@ -8,7 +8,7 @@
             <div class="jumbotron">
                 <div class="container">
                 <h1>SchoolDB</h1>
-                <h3>Database "School"</h3>
+                <p>Database "School"</p>
                 </div>
             </div>
         </div>
