--- a/app/templates/admin/schedule/yearSemesterList.html
+++ b/app/templates/admin/schedule/yearSemesterList.html
@@ -33,7 +33,7 @@
                                 <td> {{ schedule.education_plan.dayLesson }} </td>
                                 <td> {{ schedule.teachers_to_subjects }} </td>
                                 <td>
-                                    <a href="{{ url_for('home.class_dashboard', class_id=schedule.classes.id) }}">
+                                    <a href="{{ url_for('home.class_dashboard', id=schedule.classes.id) }}">
                                         {{ schedule.classes }}
                                     </a>
                                 </td>
