--- a/app/templates/home/teacher_dashboard.html
+++ b/app/templates/home/teacher_dashboard.html
@@ -22,7 +22,7 @@
 
         <div>Head Class:
             {% if headClass %}
-            <a href="{{ url_for('home.class_dashboard', class_id=headClass.id) }}">
+            <a href="{{ url_for('home.class_dashboard', id=headClass.id) }}">
                 {{ headClass.name }}
             </a>
             {% else %}
@@ -44,7 +44,7 @@
                 <div class="panel-heading">Subjects:</div>
                 <ul class="list-group">
                     {% for subject in subjects %}
-                        <a href="{{ url_for('admin.list_schedule_teacher', id_subject=subject.id, id_day=1) }}" class="list-group-item list-group-item-info">
+                        <a href="{{ url_for('schedule.list_schedule_teacher', id_subject=subject.id, id_day=1) }}" class="list-group-item list-group-item-info">
                             <i class="fa fa-external-link" aria-hidden="true"></i>
                             {{ subject.subjects.name }}
                         </a>
